# mylife-home-main-rs

./: .dockerignore  Cargo.toml  README.md  core.toml
common/: Cargo.toml
common/src/: lib.rs  mqtt.rs
common/src/bus/: client.rs  client_a.rs  encoding.rs  event_loop.rs  logger.rs  metadata.rs  mod.rs  mqtt.rs  presence.rs  rpc.rs
common/src/bus_old/: client.rs  metadata.rs  mod.rs  presence.rs
common/src/components/: component.rs  mod.rs  observable.rs  registry.rs  remote.rs  runtime.rs
common/src/components/metadata/: mod.rs  plugin.rs  type.rs
common/src/components/types/: config.rs  mod.rs  value.rs
common/src/components_old/types/: value.rs
common/src/instance_info/: mod.rs  types.rs
common/src/utils/: actors.rs  config.rs  logger.rs  mailbox.rs  mod.rs  observable.rs
core/: Makefile  config.toml  store.json
core-plugin-macros/: Cargo.toml
core-plugin-macros/src/: attributes.rs  helpers.rs  lib.rs
core-plugin-macros/tests/: basic.rs  behavior.rs  example.rs  naming.rs  no_desc.rs  types.rs  typing.rs
core-plugin-macros/tests/utils/: metadata.rs
core-plugin-runtime/: Cargo.toml
core-plugin-runtime/src/macros_backend/: builder.rs  runtime.rs
core-plugin-runtime/src/plugin/: definition.rs  metadata.rs  runtime.rs
core/mylife-home-core/: Cargo.toml  config.toml
core/mylife-home-core/src/: main.rs  modules.rs
core/mylife-home-core/src/bindings/: mod.rs  rpc_services.rs
core/mylife-home-core/src/components/: extension.rs  local_component.rs  local_components.rs  local_pugins.rs  mod.rs  rpc_services.rs
core/mylife-home-core/src/store/: mod.rs  rpc_services.rs
core/plugin-macros/: Cargo.toml
core/plugin-macros/src/: attributes.rs  helpers.rs  lib.rs
core/plugin-macros/tests/: basic.rs  behavior.rs  example.rs  naming.rs  no_desc.rs  types.rs  typing.rs
core/plugin-macros/tests/utils/: metadata.rs  mod.rs
core/plugin-runtime/: Cargo.toml
core/plugin-runtime/src/: lib.rs
core/plugin-runtime/src/macros_backend/: builder.rs  runtime.rs
core/plugin-runtime/src/plugin/: definition.rs  mod.rs  module.rs  runtime.rs
core/plugins/logic-base/: Cargo.toml
core/plugins/logic-base/src/: binary_to_percent.rs  binary_to_pulse.rs  bool_and.rs  bool_not.rs  bool_or.rs  byte_to_percent.rs  constant_bool.rs  constant_byte.rs  constant_percent.rs  float_average.rs  float_to_nullable_percent.rs  lib.rs  percent_to_binary.rs  percent_to_byte.rs  step_relay.rs  switch_to_button.rs  value_binary.rs  value_binary_demo.rs  value_float.rs  value_nullable_percent.rs  value_percent.rs
core/plugins/ui-base/: Cargo.toml
core/plugins/ui-base/src/: lib.rs  ui_button.rs  ui_state_bool.rs  ui_state_float.rs  ui_state_nullable_percent.rs  ui_state_percent.rs  ui_state_text.rs
engine/: Cargo.toml
mylife-home-core/: Cargo.toml
mylife-home-core/src/: main.rs  module.rs  modules.rs
mylife-home-core/src/modules/: loader.rs  mod.rs
plugin-macros/: Cargo.toml
plugin-macros/src/: attributes.rs  helpers.rs  lib.rs
plugin-macros/src/old/: lib.rs
plugin-macros/tests/: basic.rs  example.rs  naming.rs  no_desc.rs  types.rs  types.rszz  typing.rs
plugin-macros/tests/utils/: metadata.rs  mod.rs
plugin-runtime/: Cargo.toml
plugin-runtime/src/: lib.rs
plugin-runtime/src/macros_backend/: builder.rs  metadata_builder.rs  mod.rs  runtime.rs
plugin-runtime/src/old/: metadata.rs  properties.rs
plugin-runtime/src/plugin/: definition.rs  export.rs  metadata.rs  mod.rs  module.rs  runtime.rs
plugin_macros/: Cargo.toml
plugin_macros/src/: lib.rs
plugin_runtime/: Cargo.toml
plugin_runtime/src/: lib.rs  metadata.rs  properties.rs
plugins/logic-base/: Cargo.toml
plugins/logic-base/src/: lib.rs  value_binary.rs
studio/: Makefile
studio/mylife-home-studio/: Cargo.toml
studio/web-api/: Cargo.toml
studio/web-api/src/: registry.rs
studio/web-app/: package-lock.json  package.json  tsconfig.json
studio/web-app/bundler/: package-lock.json  package.json  vite.config.ts
studio/web-app/src/: index.html
studio/web-app/src/app/api/: component-model.ts  core-model.ts  online.ts  ui-model.ts
studio/web-app/src/app/components/core-designer/: binding-tools.ts  template-exports.tsx
studio/web-app/src/app/components/dialogs/: error.tsx
studio/web-app/src/app/components/lib/: sortable-list.tsx  theme.ts  use-debounced.ts
studio/web-app/src/app/store/: store.ts
studio/web-app/src/app/store/common/: designer-epics.ts  rx-operators.ts  rx-socket.ts
studio/web-app/src/app/store/core-designer/: epics.ts  reducer.ts  selectors.ts  types.ts
studio/web-app/src/app/store/deploy/: epics.ts  types.ts
studio/web-app/src/app/store/git/: epics.ts  types.ts
studio/web-app/src/app/store/online-components-view/: epics.ts  reducer.ts  types.ts
studio/web-app/src/app/store/online-history/: epics.ts
studio/web-app/src/app/store/online-instances-view/: epics.ts  types.ts
studio/web-app/src/app/store/online-logs/: epics.ts
studio/web-app/src/app/store/online-status/: types.ts
studio/web-app/src/app/store/projects-list/: epics.ts  types.ts
studio/web-app/types/: fs-shim.d.ts  vite-env.d.ts
ui/: Dockerfile  Makefile  config.docker.toml  config.toml
ui/mylife-home-ui/: Cargo.toml
ui/mylife-home-ui/src/: main.rs
ui/mylife-home-ui/src/model/: builder.rs  definition.rs  mod.rs  rpc_services.rs
ui/mylife-home-ui/src/web/: mod.rs  repository.rs  resources.rs  sessions.rs  webapp.rs
ui/web-api/: Cargo.toml
ui/web-api/src/: lib.rs  model.rs  socket.rs
ui/web-app/: package-lock.json
ui/web-app/bundler/: package-lock.json  package.json  webpack.config.ts
ui/web-app/src/: app.scss
ui/web-app/src/app/: main.tsx
ui/web-app/src/app/components/: view.tsx  window-content.tsx
ui/web-app/src/app/store/: store.ts
ui/webapp/: go.mod  package-lock.json  package.json  webapp.go
ui/webapp/bundler/: package-lock.json
ui/webapp/src/: index.html
ui/webapp/src/app/behaviors/: flash-feedback.ts  input-actions.ts  viewport.ts
ui/webapp/src/app/components/: application.tsx  control.tsx  loading.tsx  offline.tsx
(+44 files in other folders)
