[workspace]
members = [
  "core/mylife-home-core",
  "core/plugin-runtime",
  "core/plugin-macros",
  "core/plugins/logic-base",
  "common"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bytes = "1.11.1"
chrono = "0.4.45"
convert_case = "0.8.0"
darling = "0.20.11"
futures = "0.3.32"
inventory = "0.3.20"
kameo = "0.20.0"
kameo_actors = "0.5.0"
lazy_static = "1.5.0"
mqttbytes = "0.6.0"
pretty_env_logger = "0.5.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.94"
quote = "1.0"
rand = "0.10.1"
regex = "1.11.1"
rpi-info = "0.3.0"
rustc_version = "0.4.1"
serde = "1.0.228"
serde_json = "1.0.150"
serde_with = "3.21.0"
syn = "2.0"
tokio = "1.44.1"
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
