[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
kameo = { workspace = true }
kameo_actors = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
mqttbytes = { workspace = true }
pretty_env_logger = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_millis = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
