[package]
name = "common"
version = "3.0.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
kameo = { workspace = true, features = ["console"] }
kameo_actors = { workspace = true }
lazy_static = { workspace = true }
mqttbytes = { workspace = true }
pretty_env_logger = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
rpi-info = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time", "signal"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
