[package]
name = "core_plugin_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
log = "0.4.27"
lazy_static = "1.5.0"
regex = "1.11.1"

[build-dependencies]
rustc_version = "0.4.1"
