[package]
name = "mylife_home_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mylife-home-core"
path = "src/main.rs"

[dependencies]
plugin_runtime = { path = "../plugin-runtime" }
libloading = "0.7.4"
convert_case = "0.6.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
