[package]
name = "mylife_home_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mylife-home-core"
path = "src/main.rs"

[dependencies]
core_plugin_runtime = { path = "../core-plugin-runtime" }
plugin_logic_base = { path = "../plugins/logic-base" }
log = "0.4.27"
pretty_env_logger = "0.4.0"
