[package]
name = "plugin_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
plugin_runtime = { path = "../plugin-runtime" }
syn = "1.0"
quote = "1.0"
darling = "0.14.1"
proc-macro2 = "1.0.47"
convert_case = "0.6.0"
proc-macro-error = "1.0.4"

[dev-dependencies]
inventory = "0.3.2"
lazy_static = "1.4.0"