[package]
name = "plugin_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
log = { version = "0.4.17", features = ["kv_unstable"] }

[build-dependencies]
rustc_version = "0.4.0"
