[package]
name = "mylife-home-core"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mylife-home-core"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
common = { path = "../../common" }
futures = { workspace = true }
kameo = { workspace = true, features = ["console"] }
kameo_actors = { workspace = true }
libc = { workspace = true }
plugin_runtime = { path = "../plugin-runtime" }
plugin_logic_base = { path = "../plugins/logic-base" }
plugin_ui_base = { path = "../plugins/ui-base" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time", "fs"] }
thiserror = { workspace = true }
tracing = { workspace = true }
