[package]
name = "plugin_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
plugin_runtime = { path = "../plugin-runtime" }
syn = { workspace = true }
quote = { workspace = true }
darling = { workspace = true }
proc-macro2 = { workspace = true }
convert_case = { workspace = true }
proc-macro-error = { workspace = true }

[dev-dependencies]
inventory = { workspace = true }
lazy_static = { workspace = true }
