[package]
name = "plugin_runtime"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
convert_case = "0.8.0"
log = "0.4.27"
lazy_static = "1.5.0"
regex = "1.11.1"
inventory = "0.3.20"

[build-dependencies]
rustc_version = "0.4.1"
