[package]
name = "plugin_runtime"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
anyhow = { workspace = true }
common = { path = "../../common" }
convert_case = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
inventory = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }
