[package]
name = "logic_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "plugin_logic_base"

[dependencies]
core_plugin_runtime = { path = "../../core-plugin-runtime" }
core_plugin_macros = { path = "../../core-plugin-macros" }
inventory = "0.3.20"
lazy_static = "1.5.0"
log = "0.4.27"
