[package]
name = "mylife-home-ui"
version = "1.0.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
web-api = { path = "../web-api" }
axum = { workspace = true }
clap = { workspace = true, features = ["derive"] }
kameo = { workspace = true, features = ["console"] }
kameo_actors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time", "fs"] }
thiserror = { workspace = true }
tracing = { workspace = true }