[package]
name = "mylife-home-ui"
version = "3.0.0"
edition = "2024"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
common = { path = "../../common" }
ui-web-api = { path = "../web-api" }
axum = { workspace = true, features = ["ws"] }
base64 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
kameo = { workspace = true, features = ["console"] }
kameo_actors = { workspace = true }
maplit = { workspace = true }
md5 = { workspace = true }
mime_guess = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time", "fs"] }
thiserror = { workspace = true }
tracing = { workspace = true }

