[package]
name = "plugin_logic_base"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
plugin_runtime = { path = "../../plugin-runtime" }
plugin_macros = { path = "../../plugin-macros" }
inventory = "0.3.20"
lazy_static = "1.5.0"
log = "0.4.27"
