[package]
name = "plugin_logic_base"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
anyhow = { workspace = true }
plugin_runtime = { path = "../../plugin-runtime" }
plugin_macros = { path = "../../plugin-macros" }
inventory = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
